crates/service/tests/code_action/snapshots/features__code_action__export_as__func.snap
---
source: crates/service/tests/code_action/export_as.rs
expression: response
---
[
  {
    "title": "Export as \"f\"",
    "kind": "refactor",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 10
              },
              "end": {
                "line": 2,
                "character": 10
              }
            },
            "newText": " (export \"f\")"
          }
        ]
      }
    }
  }
]
