crates/service/tests/code_action/snapshots/features__code_action__export_as__global.snap
---
source: crates/service/tests/code_action/export_as.rs
expression: response
---
[
  {
    "title": "Export as \"g\"",
    "kind": "refactor",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 12
              },
              "end": {
                "line": 2,
                "character": 12
              }
            },
            "newText": " (export \"g\")"
          }
        ]
      }
    }
  }
]
