crates/service/tests/code_action/snapshots/features__code_action__export_as__quoted_ident.snap
---
source: crates/service/tests/code_action/export_as.rs
expression: response
---
[
  {
    "title": "Export as \"my func\"",
    "kind": "refactor",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 18
              },
              "end": {
                "line": 2,
                "character": 18
              }
            },
            "newText": " (export \"my func\")"
          }
        ]
      }
    }
  }
]
