crates/service/tests/code_action/snapshots/features__code_action__export_as__table.snap
---
source: crates/service/tests/code_action/export_as.rs
expression: response
---
[
  {
    "title": "Export as \"t\"",
    "kind": "refactor",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 11
              },
              "end": {
                "line": 2,
                "character": 11
              }
            },
            "newText": " (export \"t\")"
          }
        ]
      }
    }
  }
]
