crates/service/tests/code_action/snapshots/features__code_action__export_as__tag.snap
---
source: crates/service/tests/code_action/export_as.rs
expression: response
---
[
  {
    "title": "Export as \"e\"",
    "kind": "refactor",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 9
              },
              "end": {
                "line": 2,
                "character": 9
              }
            },
            "newText": " (export \"e\")"
          }
        ]
      }
    }
  }
]
